@@ -20,8 +20,6 @@ package org.apache.kafka.image.node;
 import org.apache.kafka.image.MetadataImage;
 
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Function;
 
@@ -37,22 +35,18 @@ public class MetadataImageNode implements MetadataNode {
      */
     private final MetadataImage image;
 
-    private static final Map<String, Function<MetadataImage, MetadataNode>> CHILDREN;
-
-    static {
-        Map<String, Function<MetadataImage, MetadataNode>> children = new HashMap<>();
-        children.put(ProvenanceNode.NAME, image -> new ProvenanceNode(image.provenance()));
-        children.put(FeaturesImageNode.NAME, image -> new FeaturesImageNode(image.features()));
-        children.put(ClusterImageNode.NAME, image -> new ClusterImageNode(image.cluster()));
-        children.put(TopicsImageNode.NAME, image -> new TopicsImageNode(image.topics()));
-        children.put(ConfigurationsImageNode.NAME, image -> new ConfigurationsImageNode(image.configs()));
-        children.put(ClientQuotasImageNode.NAME, image -> new ClientQuotasImageNode(image.clientQuotas()));
-        children.put(ProducerIdsImageNode.NAME, image -> new ProducerIdsImageNode(image.producerIds()));
-        children.put(AclsImageNode.NAME, image -> new AclsImageByIdNode(image.acls()));
-        children.put(ScramImageNode.NAME, image -> new ScramImageNode(image.scram()));
-        children.put(DelegationTokenImageNode.NAME, image -> new DelegationTokenImageNode(image.delegationTokens()));
-        CHILDREN = Collections.unmodifiableMap(children);
-    }
+    private static final Map<String, Function<MetadataImage, MetadataNode>> CHILDREN = Map.of(
+        ProvenanceNode.NAME, image -> new ProvenanceNode(image.provenance()),
+        FeaturesImageNode.NAME, image -> new FeaturesImageNode(image.features()),
+        ClusterImageNode.NAME, image -> new ClusterImageNode(image.cluster()),
+        TopicsImageNode.NAME, image -> new TopicsImageNode(image.topics()),
+        ConfigurationsImageNode.NAME, image -> new ConfigurationsImageNode(image.configs()),
+        ClientQuotasImageNode.NAME, image -> new ClientQuotasImageNode(image.clientQuotas()),
+        ProducerIdsImageNode.NAME, image -> new ProducerIdsImageNode(image.producerIds()),
+        AclsImageNode.NAME, image -> new AclsImageByIdNode(image.acls()),
+        ScramImageNode.NAME, image -> new ScramImageNode(image.scram()),
+        DelegationTokenImageNode.NAME, image -> new DelegationTokenImageNode(image.delegationTokens())
+    );
 
     public MetadataImageNode(MetadataImage image) {
         this.image = image;
